fixed main image bug on small devices

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ header {
   padding: 16px 32px;
   justify-content: space-evenly;
   align-items: center;
+  gap: 16px;
+  text-align: center;
 }
 
 header ul {
@@ -67,6 +69,7 @@ header ul li {
 }
 
 .section1 img {
+  width: 100vw;
   max-width: 400px;
   height: auto;
   border: 2px solid #e5e7eb;
@@ -80,6 +83,7 @@ header ul li {
   align-items: center;
   padding: 32px 64px;
   gap: 32px;
+  text-align: center;
 }
 
 .section2 .cardContainer {
@@ -151,6 +155,7 @@ header ul li {
   display: flex;
   padding: 32px 64px;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 .blueContainer button {
